--- a/templates/index.html
+++ b/templates/index.html
@@ -7,21 +7,20 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>监控系统</title>
     <style>
-        .top{
-            background-color: green;
-            width: 100%;
-            height: 10%;
+        body {
+            background-color: #484856;
         }
+
     </style>
 </head>
 <body>
-<h1>视频流媒体直播</h1>
+<h1 align="center" style="color: whitesmoke;">视频流媒体直播</h1>
 <div class="top">
-    <div class="recorder" id="recorder">
-        <button id="record">录制</button>
-        <button id="stop">暂停</button>
-        <a href="{{ url_for('logout') }}">退出登录</a>
-
+    <div class="recorder" id="recorder" align="center">
+        <button id="record" class="btn">录制视频</button>
+        <button id="stop" class="btn">暂停录制</button>
+        <input type="button" class="btn" value="退出登录"
+               onclick="javascrtpt:window.location.href='{{ url_for('logout') }}'">
         <a id="download"></a>
         <script type="text/javascript" src="{{ url_for('static', filename='recorder.js') }}"></script>
     </div>
