--- a/controller/templates/login.html
+++ b/controller/templates/login.html
@@ -41,7 +41,7 @@
     <div class="avtar">
         <img src="../static/images/avtar.png"/>
     </div>
-    <form method="post" action="{{ url_for("login") }}">
+    <form method="post" action="{{ url_for("user.login") }}">
         <input type="text" class="text" name="username" value="Username" onfocus="this.value = '';"
                onblur="if (this.value == '') {this.value = 'Username';}">
         <div class="key">
@@ -52,7 +52,7 @@
             <input type="submit" value="Login">
             {% if errmsg %} {# 判断是否有错误信息 #}
 
-                <div class="error_tip" style="display: block">{{ errmsg }}</div>
+                <div class="error_tip" style="display: block;color: red">{{ errmsg }}</div>
 
             {% endif %}
         </div>
